<!--
  ~ Copyright (C) 2020 Achmad Fathullah - PDA
  ~  Licensed under the Apache License, Version 2.0 (the "License");
  ~  you may not use this file except in compliance with the License.
  ~  You may obtain a copy of the License at
  ~
  ~  http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~  Unless required by applicable law or agreed to in writing, software
  ~  distributed under the License is distributed on an "AS IS" BASIS,
  ~  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~  See the License for the specific language governing permissions and
  ~  limitations under the License.
  -->

<resources>
    <string name="app_name">InstaClone</string>
    <string name="cd_default_image">This is image</string>
    <string name="lbl_no_data">No data found</string>

    <string name="text_message_error_connection">Can\'t connect to server</string>
    <string name="text_alert_internet_connection">Check your internet connection and try again</string>
    <string name="text_alert_root_detected">Root device detected!</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="hint_username">Username</string>
    <string name="btn_register">Register</string>
    <string name="btn_log_in">Log in.</string>
    <string name="lbl_register_account">Register Account</string>
    <string name="question_have_account">Already have an account ?</string>
    <string name="btn_login">Login</string>
    <string name="btn_sign_up">Sign Up.</string>
    <string name="question_havent_account">Don\'t have an account?</string>
    <string name="lbl_home">Home</string>
    <string name="lbl_search">Search</string>
    <string name="lbl_post">Post</string>
    <string name="lbl_bookmark">Bookmark</string>
    <string name="lbl_user_profile">User Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce euismod, ligula eu laoreet iaculis, magna quam vulputate nulla, vel tincidunt ante nisi sit amet odio. Mauris ornare risus tincidunt dignissim efficitur. Donec suscipit ullamcorper nulla, vel lobortis eros viverra vel. Duis faucibus, dui in mattis mollis, risus neque hendrerit elit, sit amet accumsan libero erat ut lectus. Quisque feugiat aliquet ante, quis tempor erat volutpat vitae. Etiam dapibus aliquam nibh. Donec viverra nisl libero, ut facilisis lacus semper sed. Nullam pharetra nisi vel purus ullamcorper, vel tincidunt velit accumsan. Duis ut cursus nisi. Maecenas non ipsum nec libero dignissim finibus quis at metus. Suspendisse potenti. Cras lobortis pharetra odio, pharetra vehicula dolor iaculis ac. Pellentesque at orci sapien</string>
    <string name="lbl_under_construction">Under Construction</string>
    <string name="lbl_posts">Posts</string>
    <string name="lbl_followers">Followers</string>
    <string name="btn_edit_profile">Edit Profile</string>
    <string name="lbl_warning_fill_field">Please fill this field!</string>
    <string name="lbl_alert_password_rule">must contains one digit from 0–9,uppercase characters, length at least 8 characters and maximum of 20</string>
    <string name="alert_email_rule">Please input valid email</string>
    <string name="text_pass_not_match">Password didn\'t match</string>
    <string name="text_alert_user_exist">\"User with this email already exist.\"</string>

</resources>