<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/lbl_home" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_search"
        android:title="@string/lbl_search" />

    <item
        android:id="@+id/navigation_post"
        android:icon="@drawable/ic_post"
        android:title="@string/lbl_post" />
    <item
        android:id="@+id/navigation_bookmark"
        android:icon="@drawable/ic_bookmark"
        android:title="@string/lbl_bookmark" />

    <item
        android:id="@+id/navigation_user"
        android:icon="@drawable/ic_account_circle_24"
        android:title="@string/lbl_user_profile" />

</menu>
